[project]
name = "mev-commit-holesky"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Evan-Kim2028", email = "ekcopersonal@gmail.com" }
]
dependencies = [
    "lancedb-tables>=0.1.3",
    "marimo>=0.8.14",
    "polars>=1.6.0",
    "altair>=5.4.1",
    "ipykernel>=6.29.5"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mev_commit_holesky"]
